2008-11-07  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.cpp: Fix really horribly broken code which was
	  checking whether a char * was equal to "".

2008-11-07  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.h: Merge the old content of Config.h into the lower
	  case file to get rid of the case clash on MacOS.

	* varconf/config.cpp, varconf/dyntypes.cpp, varconf/varconf.h:
	  Include config.h with the lower case filename.

2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Fixing library to compile under GCC 4.3.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.5. Interface version 6.0.0.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* varconf.spec.in: Tweak the rpm spec a little.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* tests/conftest.cpp: Add assert include missing from the test that
	  uses assert.

2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number. Remove conflicts, as
	  we don't really have a conflict.

	* varconf-1.0.pc.in: Don't conflict with earlier versions of sigc++.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h, varconf/config.cpp, varconf/dynbase.cpp,
	  varconf/dynbase.h, varconf/dyncmp.cpp, varconf/dyncmp.h,
	  varconf/dyntypes.cpp, varconf/dyntypes.h, varconf/parse_error.cpp,
	  varconf/parse_error.h, varconf/variable.cpp, varconf/variable.h:
	  Update the copyright statements with current maintainer.

2006-08-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf/variable.cpp: Simplify equality check.

2006-08-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.cpp: Avoid resetting an item if it is already set
	  to the value given.

2006-04-11  Simon Goodall  <simon@simongoodall.co.uk>

	* varconf/variable.cpp: Escape backslash characters.

2006-02-19  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h, varconf/variable.h, tests/conftest.cpp:
	  Update usage of sigc++ to the native 2.0 API rather than the